--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -4,6 +4,12 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+    <connectionStrings>
+        <add name="WebApplicationDb" 
+             connectionString="data source=.\SQLSERVER2012;Initial Catalog=WebApplicationDb;Integrated Security=True"
+             providerName="System.Data.SqlClient" />
+    </connectionStrings>
+    
     <appSettings>
         <add key="webpages:Version" value="3.0.0.0"/>
         <add key="webpages:Enabled" value="false"/>
